--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,10 @@
-footer{
-    color: white;
+footer {
+    background-color: white;
     height: 60px;
     width: 100%;
-    border-top:1px #CCCCCC;
-    
+    border-top: 1px solid #CCCCCC;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    line-height: 60px;
 }
