--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,6 +1,9 @@
 header {
+    background-color: white;
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    background: white url("/images/logo.png") 20px center no-repeat;
-  }
+    background-image: url(../images/logo.png);
+    background-repeat: no-repeat;
+    background-position: 20px 50%;
+}
